Make monit watch tmp-run.sh (long-running script) - Temporary solution until we fix out how to get monit to watch ceph-mon
[#112020253] https://www.pivotaltracker.com/story/show/112020253

Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/jobs/cephfs/templates/ctl.erb
+++ b/jobs/cephfs/templates/ctl.erb
@@ -22,7 +22,7 @@ case $1 in
       # guard multiple starts
       touch $LOG_DIR/.started
 
-      exec chpst -u root:root /var/vcap/jobs/cephfs/bin/install-all.sh \
+      chpst -u root:root /var/vcap/jobs/cephfs/bin/install-all.sh \
           1>>$LOG_DIR/ceph.stdout.log \
           2>>$LOG_DIR/ceph.stderr.log
 
