--- a/jobs/cephfs/templates/ctl.erb
+++ b/jobs/cephfs/templates/ctl.erb
@@ -4,6 +4,7 @@ RUN_DIR=/var/vcap/sys/run/cephfs
 LOG_DIR=/var/vcap/sys/log/cephfs
 PIDFILE=${RUN_DIR}/pid
 
+
 case $1 in
 
   start)
@@ -41,6 +42,11 @@ case $1 in
     ;;
 
   stop)
+    
+    kill -9 $(pgrep -f 'ceph-mds')
+    kill -9 $(pgrep -f 'ceph-osd -i 0')
+    kill -9 $(pgrep -f 'ceph-osd -i 1')
+    kill -9 $(pgrep -f 'ceph-osd -i 2')
     kill -9 `cat $PIDFILE`
     rm -f $PIDFILE
 
