--- a/jobs/cephfs/templates/bin/install.sh.erb
+++ b/jobs/cephfs/templates/bin/install.sh.erb
@@ -1,5 +1,4 @@
 #!/bin/bash
-set -e -x
 
 PWD=`pwd`
 
@@ -205,3 +204,6 @@ ceph osd pool create cephfs_data 128
 ceph osd pool create cephfs_metadata 128
 ceph fs new cephfs cephfs_metadata cephfs_data
 popd
+sleep 60
+ceph health > /var/vcap/sys/log/cephfs/health
+exit 0 
