--- a/jobs/cephfs/templates/ctl.erb
+++ b/jobs/cephfs/templates/ctl.erb
@@ -1,43 +1,23 @@
 #!/bin/bash
 
 RUN_DIR=/var/vcap/sys/run/cephfs
-LOG_DIR=/var/vcap/sys/log/cephfs
 PIDFILE=${RUN_DIR}/pid
 
 
 case $1 in
 
   start)
-    pid_guard $PIDFILE "ceph"
-    mkdir -p $RUN_DIR $LOG_DIR
-    chown -R vcap:vcap $RUN_DIR $LOG_DIR
-
-    echo $$ > $PIDFILE
-
-    rm $LOG_DIR/.started
-
-    if [ ! -f $LOG_DIR/.started ]; then
-
-      rm -rf $LOG_DIR/*
-
-      # guard multiple starts
-      touch $LOG_DIR/.started
-
-      chpst -u root:root /var/vcap/jobs/cephfs/bin/install-all.sh \
-          1>>$LOG_DIR/ceph.stdout.log \
-          2>>$LOG_DIR/ceph.stderr.log
-
-      echo `pgrep -f ceph-mon` > $PIDFILE
-
-      rm $LOG_DIR/.started
-
+        
+    mkdir -p $RUN_DIR
+    chown -R vcap:vcap $RUN_DIR
+    status=$(ceph health | grep HEALTH_OK)
+    while [ "$status" != "HEALTH_OK" ]; do
+      sleep 2
       status=$(ceph health | grep HEALTH_OK)
-      if [ "$status" == "HEALTH_OK" ]; then
-        exit 0
-      fi
-      exit 1
+    done
 
-    fi
+    echo `pgrep -f ceph-mon` > $PIDFILE
+    
 
     ;;
 
