--- a/jobs/cephdriver/templates/ctl.erb
+++ b/jobs/cephdriver/templates/ctl.erb
@@ -29,10 +29,11 @@ case $1 in
     # Allowed number of open file descriptors
     ulimit -n 100000
 
-    exec chpst -u vcap:vcap /var/vcap/packages/cephdriver/bin/cephdriver \
+    exec chpst -u root:root /var/vcap/packages/cephdriver/bin/cephdriver \
       --listenAddr="<%= p("cephdriver.listen_addr") %>" \
       --transport="tcp" \
       --debugAddr="<%= p("cephdriver.debug_addr") %>" \
+      --driversPath="<%= p("cephdriver.drivers_path") %>" \
       --logLevel="<%= p("cephdriver.log_level") %>" \
       2> >(tee -a $LOG_DIR/cephdriver.stderr.log | logger -p user.error -t vcap.cephdriver) \
       1> >(tee -a $LOG_DIR/cephdriver.stdout.log | logger -p user.info -t vcap.cephdriver)
