Added scripts for cf deployment to test the service broker within the CI
Signed-off-by: Mohamed Mohamed <mmohamed@us.ibm.com>

--- a/jobs/cephbroker/templates/install.erb
+++ b/jobs/cephbroker/templates/install.erb
@@ -27,6 +27,9 @@ cp /var/vcap/packages/cephbroker/src/github.com/cloudfoundry-incubator/cephbroke
 
 echo "{}" > $DATA_DIR/ServiceBindings.json
 echo "{}" > $DATA_DIR/ServiceInstances.json
+# clean up source artifacts
+
+rm -rf ${BOSH_INSTALL_TARGET}/src ${BOSH_INSTALL_TARGET}/pkg
 
 echo "prepared data files"
 exit 0
