--- a/jobs/cephfs/templates/ctl.erb
+++ b/jobs/cephfs/templates/ctl.erb
@@ -21,7 +21,8 @@ case $1 in
     # chown cephfs to vcap
     mkdir /home/vcap/cephfs
     chown vcap:vcap /home/vcap/cephfs
-    ceph-fuse -m 10.0.0.106:6789 -c /etc/ceph/ceph.client.admin.keyring -r / /home/vcap/cephfs
+    ipaddr=$(ip addr | grep 'state UP' -A2 | tail -n1 | awk '{print $2}' | cut -f1  -d'/')
+    ceph-fuse -m ${ipaddr}:6789 -c /etc/ceph/ceph.client.admin.keyring -r / /home/vcap/cephfs
     chown -R vcap:vcap /home/vcap/cephfs
     umount /home/vcap/cephfs
     rm -rf /home/vcap/cephfs
