--- a/jobs/cephdriver/templates/install.erb
+++ b/jobs/cephdriver/templates/install.erb
@@ -16,6 +16,9 @@ sudo mkdir -p /etc/ceph && sudo chown -R vcap:vcap /etc/ceph
 DATA_DIR=<%= p("cephdriver.driver_paths") %>
 mkdir -p $DATA_DIR
 chown vcap:vcap $DATA_DIR
+VOL_DIR=<%= p("cephdriver.cell_mount_path") %>
+mkdir -p VOL_DIR
+chown vcap:vcap VOL_DIR
 
 echo "Installed ceph-fuse"
 exit 0
