--- a/jobs/cephdriver/templates/install.erb
+++ b/jobs/cephdriver/templates/install.erb
@@ -17,8 +17,8 @@ DATA_DIR=<%= p("cephdriver.driver_paths") %>
 mkdir -p $DATA_DIR
 chown vcap:vcap $DATA_DIR
 VOL_DIR=<%= p("cephdriver.cell_mount_path") %>
-mkdir -p VOL_DIR
-chown vcap:vcap VOL_DIR
+mkdir -p $VOL_DIR
+chown vcap:vcap $VOL_DIR
 
 echo "Installed ceph-fuse"
 exit 0
