Expose cephbroker' username and password command line parameters - Update CI scripts to specify a username and password for cephbroker [#135174273](https://www.pivotaltracker.com/story/show/135174273)
Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/jobs/cephbroker/templates/ctl.erb
+++ b/jobs/cephbroker/templates/ctl.erb
@@ -64,6 +64,8 @@ case $1 in
       --planDesc="<%= p("cephbroker.plan-desc") %>" \
       --baseMountPath="<%= p("cephbroker.default-mount-path") %>" \
       --keyringFile=/var/vcap/jobs/cephbroker/keys/ceph.client.admin.keyring \
+      --username="<%= p("cephbroker.username") %>" \
+      --password="<%= p("cephbroker.password") %>" \
       2> >(tee -a $LOG_DIR/cephbroker.stderr.log | logger -p user.error -t vcap.cephbroker) \
       1> >(tee -a $LOG_DIR/cephbroker.stdout.log | logger -p user.info -t vcap.cephbroker)
 
