set path to favor fusermount found in bin/fusermount as an attempt to get unmounts to work properly again [#142357941](https://www.pivotaltracker.com/story/show/142357941)

--- a/jobs/cephdriver/templates/ctl.erb
+++ b/jobs/cephdriver/templates/ctl.erb
@@ -29,6 +29,8 @@ case $1 in
     # Allowed number of open file descriptors
     ulimit -n 100000
 
+    export PATH=/bin:$PATH
+
     exec chpst -u vcap:vcap /var/vcap/packages/cephdriver/bin/cephdriver \
       --listenAddr="<%= p("cephdriver.listen_addr") %>" \
       --transport="tcp" \
